--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,6 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,700italic,400italic" rel="stylesheet">
 
-    <link href="{{ '/assets/lib/easy-social-buttons/jquery.easy-social-buttons.css' | prepend: site.baseurl }}" rel="stylesheet">
     <link href="{{ '/assets/css/style.css' | prepend: site.baseurl }}" rel="stylesheet">
 </head>
 <body>
@@ -92,7 +91,7 @@
             <div class="block sticky">
                 <h1>{{ site.str_recent_posts }}</h1>
                 <ul>
-                    {% assign posts = (site.posts | sort: 'date' | reverse) %}
+                    {% assign posts = (site.posts | where: 'hide', null | sort: 'date' | reverse) %}
                     {% for post in posts limit:site.recent_posts_num %}
                     <li><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
                     {% endfor %}
@@ -110,8 +109,6 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="{{ '/assets/lib/garand-sticky/jquery.sticky.js' | prepend: site.baseurl }}"></script>
-<script src="{{ '/assets/lib/easy-social-buttons/jquery.social-info.js' | prepend: site.baseurl }}"></script>
-<script src="{{ '/assets/lib/easy-social-buttons/jquery.easy-social-buttons.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/assets/js/script.js' | prepend: site.baseurl }}"></script>
 
 {% if page.id %}
@@ -122,6 +119,7 @@
 <script src="{{ '/assets/js/search.js' | prepend: site.baseurl }}"></script>
 {% endif %}
 
+{% include fb-root.html %}
 {% include google-analytics.html %}
 
 </body>
