--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,10 @@
     {% else %}
     {% assign description = site.description %}
     {% endif %}
+    
+    {% if page.use_math %}
+      {% include mathjax_support %}
+    {% endif %}
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
