--- a/_includes/article-header.html
+++ b/_includes/article-header.html
@@ -61,4 +61,8 @@
         <img class="eye-catch" src="{{ page.eye_catch }}"/>
     </p>
     {% endif %}
+      <!-- Mathjax -->
+    <script type="text/javascript"
+        src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
 </header>
