--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,126 +1,47 @@
 <!DOCTYPE html>
-<html lang="{{ site.language }}">
-<head>
-    {% capture title %}{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}{% endcapture %}
+<html lang="en-us">
 
-    {% include page-url-resolver.html page=page %}
+  {% include head.html %}
 
-    {% if page.excerpt %}
-    {% assign description = page.excerpt | strip_html | strip_newlines | truncate: 160 %}
-    {% else %}
-    {% assign description = site.description %}
-    {% endif %}
+  <body>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% include sidebar.html %}
 
-    <title>{{ title }}</title>
-
-    <meta name="description" content="{{ description }}">
-
-    <link rel="shortcut icon" href="{{ '/favicon.ico' | prepend: site.baseurl }}" type="image/x-icon">
-    <link rel="canonical" href="{{ url }}">
-    <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl }}" />
-
-    {% if page.eye_catch %}
-    {% assign ogp_image_url = page.eye_catch %}
-    {% else %}
-    {% assign ogp_image_url = site.ogp.image_url %}
-    {% endif %}
-
-    <meta property="og:title" content="{{ title }}" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="{{ ogp_image_url }}" />
-    <meta property="og:url" content="{{ url }}" />
-    <meta property="og:site_name" content="{{ site.title }}" />
-    <meta property="fb:admins" content="{{ site.ogp.fb.admin }}" />
-    <meta property="fb:app_id" content="{{ site.ogp.fb.app_id }}" />
-    <meta property="og:description" content="{{ description }}" />
-
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,700italic,400italic" rel="stylesheet">
-
-    <link href="{{ '/assets/css/style.css' | prepend: site.baseurl }}" rel="stylesheet">
-</head>
-<body>
-
-<header class="site-header">
-    <div class="inner clearfix">
-        {% if site.avatar %}
-        <a href="{{ '/' | prepend: site.baseurl }}">
-            <img class="avatar" src="{{ site.avatar | prepend: site.baseurl }}" alt=""/>
-        </a>
-        {% endif %}
-        <h1 class="clearfix">
-            <a class="title {% if site.avatar == null %}slim{% endif %}" href="{{ '/' | prepend: site.baseurl }}">{{ site.title }}</a>
-            <p class="description">{{ site.description }}</p>
-        </h1>
-    </div>
-</header>
-
-<div class="site-container">
-    <div class="site-content">
-        {{ content }}
-    </div>
-
-    <aside class="site-aside">
-        <div class="inner">
-            <div class="block">
-                <form action="{{ site.baseurl }}/search">
-                    <input type="search" id="search" name="q" placeholder="{{ site.str_search }}" />
-                </form>
-            </div>
-            <ul>
-                {% assign pages = (site.pages | sort: 'order') %}
-                {% for page in pages %}
-                {% if page.title and page.hide != true %}
-                <li><a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
-                {% endif %}
-                {% endfor %}
-            </ul>
-            <ul class="icons">
-                {% include icons.html icons=site.icons %}
-            </ul>
-            <hr class="with-no-margin margin-bottom"/>
-
-            <div class="block sticky">
-                <h1>{{ site.str_recent_posts }}</h1>
-                <ul>
-                    {% assign posts = (site.posts | where: 'hide', null | sort: 'date' | reverse) %}
-                    {% for post in posts limit:site.recent_posts_num %}
-                    <li><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
-                    {% endfor %}
-                </ul>
-            </div>
+    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
+         content to avoid any CSS collisions with our real content. -->
+    <div class="wrap">
+      <div class="masthead">
+        <div class="container">
+          <h3 class="masthead-title">
+            <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+            <small>{{ site.tagline }}</small>
+          </h3>
         </div>
-    </aside>
-</div>
+      </div>
 
-<footer class="site-footer">
-    <div class="inner">
-        <span>Powered by <a href="http://jekyllrb.com">Jekyll</a> with <a href="https://github.com/qckanemoto/jekyll-qck-theme">QckTheme</a></span>
+      <div class="container content">
+        {{ content }}
+      </div>
     </div>
-</footer>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="{{ '/assets/lib/garand-sticky/jquery.sticky.js' | prepend: site.baseurl }}"></script>
-<script src="{{ '/assets/js/script.js' | prepend: site.baseurl }}"></script>
+    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
-{% if page.id %}
-<script src="{{ '/assets/js/header-link.js' | prepend: site.baseurl }}"></script>
-{% endif %}
+    <script>
+      (function(document) {
+        var toggle = document.querySelector('.sidebar-toggle');
+        var sidebar = document.querySelector('#sidebar');
+        var checkbox = document.querySelector('#sidebar-checkbox');
 
-{% if page.permalink == '/search/' %}
-<script src="{{ '/assets/js/search.js' | prepend: site.baseurl }}"></script>
-{% endif %}
+        document.addEventListener('click', function(e) {
+          var target = e.target;
 
-{% include fb-root.html %}
-{% include google-analytics.html %}
+          if(!checkbox.checked ||
+             sidebar.contains(target) ||
+             (target === checkbox || target === toggle)) return;
 
-</body>
+          checkbox.checked = false;
+        }, false);
+      })(document);
+    </script>
+  </body>
 </html>
