--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,12 +2,7 @@
 layout: default
 ---
 
-<div class="article-wrapper">
-    <article>
-        {% include article-header.html page=page link=false share=page.share %}
-        <section class="post-content">
-            {{ content }}
-        </section>
-        {% include article-footer.html page=page share=page.share %}
-    </article>
+<div class="page">
+  <h1 class="page-title">{{ page.title }}</h1>
+  {{ content }}
 </div>
