--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,18 +2,24 @@
 layout: default
 ---
 
-<div class="article-wrapper">
-    <article>
-        {% include article-header.html page=page link=false share=page.share %}
-        <section class="post-content">
-            {{ content }}
-        </section>
-        {% include article-footer.html page=page share=page.share %}
-    </article>
+<div class="post">
+  <h1 class="post-title">{{ page.title }}</h1>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
+  {{ content }}
 </div>
 
-{% if site.disqus %}
-<section class="comments">
-    {% include disqus.html %}
-</section>
-{% endif %}
+<div class="related">
+  <h2>Related Posts</h2>
+  <ul class="related-posts">
+    {% for post in site.related_posts limit:3 %}
+      <li>
+        <h3>
+          <a href="{{ site.baseurl }}{{ post.url }}">
+            {{ post.title }}
+            <small>{{ post.date | date_to_string }}</small>
+          </a>
+        </h3>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
