--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,14 +2,16 @@
 layout: default
 ---
 
-<div class="post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
-  <ul class="tags">
+<!-- Tags -->
+<ul class="tags">
   {% for tag in page.tags %}
     <li><a href="/tags#{{ tag }}" class="tag">{{ tag }}</a></li>
   {% endfor %}
-  </ul>
+</ul>
+
+<div class="post">
+  <h1 class="post-title">{{ page.title }}</h1>
+  <span class="post-date">{{ page.date | date_to_string }}</span>
   {{ content }}
 </div>
 
