--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -436,13 +436,14 @@ a.pagination-item:hover {
 /* Tags */
 
 .tags {
+  list-style-type: none;
   margin: 0;
-  overflow: hidden;
   padding: 0;
 }
 
 .tags li {
   float: left;
+  display: inline;
 }
 
 
