--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="post">
   <h1 class="post-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}
+  <span class="post-date">{{ page.date | date_to_string }}</span>
 
   <!-- Tags -->
   <ul class="tags">
@@ -12,7 +12,7 @@ layout: default
       <li><a href="/tags#{{ tag }}" class="tag">{{ tag }}</a></li>
     {% endfor %}
   </ul>
-  </span>
+  
   {{ content }}
 </div>
 
