--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -448,9 +448,7 @@ a.pagination-item:hover {
 
 .tag {
   font: 15px/1.5 'PT Sans', serif;
-  background: #767676;
   border-radius: 3px 0 0 3px;
-  color: #FFFFFF;
   display: inline-block;
   height: 26px;
   line-height: 26px;
@@ -466,6 +464,23 @@ a.pagination-item:hover {
 }
 
 /*
+
+.tag {
+  font: 15px/1.5 'PT Sans', serif;
+  background: #767676;
+  border-radius: 3px 0 0 3px;
+  color: #FFFFFF;
+  display: inline-block;
+  height: 26px;
+  line-height: 26px;
+  padding: 0 20px 0 23px;
+  position: relative;
+  margin: 0 10px 10px 0;
+  text-decoration: none;
+  -webkit-transition: color 0.2s;
+}
+
+
 .tag::before {
   background: #fff;
   border-radius: 10px;
