--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -448,6 +448,7 @@ a.pagination-item:hover {
 
 .tag {
   font: 15px/1.5 'PT Sans', serif;
+  background: #767676;
   border-radius: 3px 0 0 3px;
   display: inline-block;
   height: 26px;
