--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -446,29 +446,15 @@ a.pagination-item:hover {
   float: left;
 }
 
-.tag {
-  font: 15px/1.5 'PT Sans', serif;
-  background: #767676;
-  border-radius: 3px 0 0 3px;
-  display: inline-block;
-  height: 26px;
-  line-height: 26px;
-  padding: 0 20px 0 23px;
-  position: relative;
-  margin: 0 10px 10px 0;
-  text-decoration: none;
-  -webkit-transition: color 0.2s;
-}
 
 .tag-archive-font {
   font-size: 13px;
 }
 
-/*
 
 .tag {
   font: 15px/1.5 'PT Sans', serif;
-  background: #767676;
+  background: #EEECEC;
   border-radius: 3px 0 0 3px;
   color: #FFFFFF;
   display: inline-block;
@@ -514,7 +500,7 @@ a.pagination-item:hover {
 .tag:hover::after {
   border-left-color: #f05422;
 }
-*/
+
 
 
 /*
