add search and feeds

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -37,4 +37,7 @@
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
   </div>
+    <div class="sidebar-item">
+    <p href="{{site.baseurl}}/feed.xml">RSS</p>
+  </div>
 </div>
