add search and feeds

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -36,8 +36,6 @@
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
-  </div>
-    <div class="sidebar-item">
-    <p href="{{site.baseurl}}/feed.xml">RSS</p>
+    <a href="{{site.baseurl}}/feed.xml">RSS</a>
   </div>
 </div>
