--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,6 +25,7 @@
       {% endif %}
     {% endfor %}
 
+    <a class="sidebar-nav-item" href="{{site.baseurl}}/feed.xml">RSS</a>
 <!--
     <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
     <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
@@ -36,6 +37,5 @@
     <p>
       &copy; {{ site.time | date: '%Y' }}. All rights reserved.
     </p>
-    <a href="{{site.baseurl}}/feed.xml">RSS</a>
   </div>
 </div>
